# Cellulolytic_Biofilms_simulations_1d

./: CMakeLists.txt  CeBiSIM-intel  CeBiSi.h  LCGS.c  Makefile_intel  Marsaglia_polar_generator.c  PRNG_uniform.c  README.md  Simulation_log  approximations.c  integrator.c  main.c  model_functions.c  params  params_read.c  pararand.c
